--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
+  <title>my-first-website</title><br>
+  <h2>My first git change</h2>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
