Updated development branch for the first time

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>my-first-website</title><br>
-  <h2>My first git change</h2>
+  <h2>My first git change</h2><br>
+  <h3>Development branch</h3>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
